package amqp;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/karelbilek/amqp-test-server/amqp/amqp.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;



message ConnectionStart {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 version_major = 1 [(gogoproto.casttype) = "byte", (gogoproto.nullable) = false];
  optional uint32 version_minor = 2 [(gogoproto.casttype) = "byte", (gogoproto.nullable) = false];
  optional Table server_properties = 3;
  optional bytes mechanisms = 4;
  optional bytes locales = 5;
}

message ConnectionStartOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional Table client_properties = 1;
  optional string mechanism = 2 [(gogoproto.nullable) = false];
  optional bytes response = 3;
  optional string locale = 4 [(gogoproto.nullable) = false];
}

message ConnectionSecure {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional bytes challenge = 1;
}

message ConnectionSecureOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional bytes response = 1;
}

message ConnectionTune {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 channel_max = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional uint32 frame_max = 2 [(gogoproto.nullable) = false];
  optional uint32 heartbeat = 3 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
}

message ConnectionTuneOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 channel_max = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional uint32 frame_max = 2 [(gogoproto.nullable) = false];
  optional uint32 heartbeat = 3 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
}

message ConnectionOpen {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional string virtual_host = 1 [(gogoproto.nullable) = false];
  optional string reserved1 = 2 [(gogoproto.nullable) = false];
  optional bool reserved2 = 3 [(gogoproto.nullable) = false];
}

message ConnectionOpenOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional string reserved1 = 1 [(gogoproto.nullable) = false];
}

message ConnectionClose {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reply_code = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string reply_text = 2 [(gogoproto.nullable) = false];
  optional uint32 class_id = 3 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional uint32 method_id = 4 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
}

message ConnectionCloseOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message ConnectionBlocked {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional string reason = 1 [(gogoproto.nullable) = false];
}

message ConnectionUnblocked {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}




message ChannelOpen {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional string reserved1 = 1 [(gogoproto.nullable) = false];
}

message ChannelOpenOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional bytes reserved1 = 1;
}

message ChannelFlow {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional bool active = 1 [(gogoproto.nullable) = false];
}

message ChannelFlowOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional bool active = 1 [(gogoproto.nullable) = false];
}

message ChannelClose {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reply_code = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string reply_text = 2 [(gogoproto.nullable) = false];
  optional uint32 class_id = 3 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional uint32 method_id = 4 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
}

message ChannelCloseOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}




message ExchangeDeclare {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string exchange = 2 [(gogoproto.nullable) = false];
  optional string type = 3 [(gogoproto.nullable) = false];
  optional bool passive = 4 [(gogoproto.nullable) = false];
  optional bool durable = 5 [(gogoproto.nullable) = false];
  optional bool auto_delete = 6 [(gogoproto.nullable) = false];
  optional bool internal = 7 [(gogoproto.nullable) = false];
  optional bool no_wait = 8 [(gogoproto.nullable) = false];
  optional Table arguments = 9;
}

message ExchangeDeclareOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message ExchangeDelete {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string exchange = 2 [(gogoproto.nullable) = false];
  optional bool if_unused = 3 [(gogoproto.nullable) = false];
  optional bool no_wait = 4 [(gogoproto.nullable) = false];
}

message ExchangeDeleteOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message ExchangeBind {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string destination = 2 [(gogoproto.nullable) = false];
  optional string source = 3 [(gogoproto.nullable) = false];
  optional string routing_key = 4 [(gogoproto.nullable) = false];
  optional bool no_wait = 5 [(gogoproto.nullable) = false];
  optional Table arguments = 6;
}

message ExchangeBindOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message ExchangeUnbind {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string destination = 2 [(gogoproto.nullable) = false];
  optional string source = 3 [(gogoproto.nullable) = false];
  optional string routing_key = 4 [(gogoproto.nullable) = false];
  optional bool no_wait = 5 [(gogoproto.nullable) = false];
  optional Table arguments = 6;
}

message ExchangeUnbindOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}




message QueueDeclare {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string queue = 2 [(gogoproto.nullable) = false];
  optional bool passive = 3 [(gogoproto.nullable) = false];
  optional bool durable = 4 [(gogoproto.nullable) = false];
  optional bool exclusive = 5 [(gogoproto.nullable) = false];
  optional bool auto_delete = 6 [(gogoproto.nullable) = false];
  optional bool no_wait = 7 [(gogoproto.nullable) = false];
  optional Table arguments = 8;
}

message QueueDeclareOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional string queue = 1 [(gogoproto.nullable) = false];
  optional uint32 message_count = 2 [(gogoproto.nullable) = false];
  optional uint32 consumer_count = 3 [(gogoproto.nullable) = false];
}

message QueueBind {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string queue = 2 [(gogoproto.nullable) = false];
  optional string exchange = 3 [(gogoproto.nullable) = false];
  optional string routing_key = 4 [(gogoproto.nullable) = false];
  optional bool no_wait = 5 [(gogoproto.nullable) = false];
  optional Table arguments = 6;
}

message QueueBindOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message QueueUnbind {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string queue = 2 [(gogoproto.nullable) = false];
  optional string exchange = 3 [(gogoproto.nullable) = false];
  optional string routing_key = 4 [(gogoproto.nullable) = false];
  optional Table arguments = 5;
}

message QueueUnbindOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message QueuePurge {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string queue = 2 [(gogoproto.nullable) = false];
  optional bool no_wait = 3 [(gogoproto.nullable) = false];
}

message QueuePurgeOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 message_count = 1 [(gogoproto.nullable) = false];
}

message QueueDelete {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string queue = 2 [(gogoproto.nullable) = false];
  optional bool if_unused = 3 [(gogoproto.nullable) = false];
  optional bool if_empty = 4 [(gogoproto.nullable) = false];
  optional bool no_wait = 5 [(gogoproto.nullable) = false];
}

message QueueDeleteOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 message_count = 1 [(gogoproto.nullable) = false];
}



message BasicContentHeaderProperties {
  
  optional string content_type = 1;
  optional string content_encoding = 2;
  optional Table headers = 3;
  optional uint32 delivery_mode = 4 [(gogoproto.casttype) = "byte"];
  optional uint32 priority = 5 [(gogoproto.casttype) = "byte"];
  optional string correlation_id = 6;
  optional string reply_to = 7;
  optional string expiration = 8;
  optional string message_id = 9;
  optional uint64 timestamp = 10;
  optional string type = 11;
  optional string user_id = 12;
  optional string app_id = 13;
  optional string reserved = 14;
}


message BasicQos {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 prefetch_size = 1 [(gogoproto.nullable) = false];
  optional uint32 prefetch_count = 2 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional bool global = 3 [(gogoproto.nullable) = false];
}

message BasicQosOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message BasicConsume {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string queue = 2 [(gogoproto.nullable) = false];
  optional string consumer_tag = 3 [(gogoproto.nullable) = false];
  optional bool no_local = 4 [(gogoproto.nullable) = false];
  optional bool no_ack = 5 [(gogoproto.nullable) = false];
  optional bool exclusive = 6 [(gogoproto.nullable) = false];
  optional bool no_wait = 7 [(gogoproto.nullable) = false];
  optional Table arguments = 8;
}

message BasicConsumeOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional string consumer_tag = 1 [(gogoproto.nullable) = false];
}

message BasicCancel {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional string consumer_tag = 1 [(gogoproto.nullable) = false];
  optional bool no_wait = 2 [(gogoproto.nullable) = false];
}

message BasicCancelOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional string consumer_tag = 1 [(gogoproto.nullable) = false];
}

message BasicPublish {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string exchange = 2 [(gogoproto.nullable) = false];
  optional string routing_key = 3 [(gogoproto.nullable) = false];
  optional bool mandatory = 4 [(gogoproto.nullable) = false];
  optional bool immediate = 5 [(gogoproto.nullable) = false];
}

message BasicReturn {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reply_code = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string reply_text = 2 [(gogoproto.nullable) = false];
  optional string exchange = 3 [(gogoproto.nullable) = false];
  optional string routing_key = 4 [(gogoproto.nullable) = false];
}

message BasicDeliver {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional string consumer_tag = 1 [(gogoproto.nullable) = false];
  optional uint64 delivery_tag = 2 [(gogoproto.nullable) = false];
  optional bool redelivered = 3 [(gogoproto.nullable) = false];
  optional string exchange = 4 [(gogoproto.nullable) = false];
  optional string routing_key = 5 [(gogoproto.nullable) = false];
}

message BasicGet {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint32 reserved1 = 1 [(gogoproto.casttype) = "uint16", (gogoproto.nullable) = false];
  optional string queue = 2 [(gogoproto.nullable) = false];
  optional bool no_ack = 3 [(gogoproto.nullable) = false];
}

message BasicGetOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint64 delivery_tag = 1 [(gogoproto.nullable) = false];
  optional bool redelivered = 2 [(gogoproto.nullable) = false];
  optional string exchange = 3 [(gogoproto.nullable) = false];
  optional string routing_key = 4 [(gogoproto.nullable) = false];
  optional uint32 message_count = 5 [(gogoproto.nullable) = false];
}

message BasicGetEmpty {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional string reserved1 = 1 [(gogoproto.nullable) = false];
}

message BasicAck {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint64 delivery_tag = 1 [(gogoproto.nullable) = false];
  optional bool multiple = 2 [(gogoproto.nullable) = false];
}

message BasicReject {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint64 delivery_tag = 1 [(gogoproto.nullable) = false];
  optional bool requeue = 2 [(gogoproto.nullable) = false];
}

message BasicRecoverAsync {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional bool requeue = 1 [(gogoproto.nullable) = false];
}

message BasicRecover {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional bool requeue = 1 [(gogoproto.nullable) = false];
}

message BasicRecoverOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message BasicNack {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional uint64 delivery_tag = 1 [(gogoproto.nullable) = false];
  optional bool multiple = 2 [(gogoproto.nullable) = false];
  optional bool requeue = 3 [(gogoproto.nullable) = false];
}




message TxSelect {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message TxSelectOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message TxCommit {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message TxCommitOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message TxRollback {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}

message TxRollbackOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}




message ConfirmSelect {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
  optional bool nowait = 1 [(gogoproto.nullable) = false];
}

message ConfirmSelectOk {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  
}




  